--- a/happilyever/package.json
+++ b/happilyever/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cloudinary-react": "^1.1.4",
     "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.8",
+    "react-images-upload": "^1.2.7",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.0",
     "styled-components": "^4.3.2",
+    "superagent": "^5.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
